--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,20 @@
 # Ignore symbolic links
 Streamlit_Projects/
 
-# Ignore other files or folders (if necessary)
-*.csv
+# Ignore dynamically fetched data/models
+Streamlit_Projects/pickled_data/
+Streamlit_Projects/DataSets/
 
-# Do NOT ignore pickled data folder and datasets
-# Remove the following lines if you want to track them
-# Streamlit_Projects/pickled_data/
-# Streamlit_Projects/DataSets/
-
-# Track .pkl files explicitly for Spam, Flight, and Wine models
+# Do NOT ignore critical files for testing purposes
 !Streamlit_Projects/pickled_data/Spam_Model.pkl
 !Streamlit_Projects/pickled_data/tfidf_Vectorizer_Spam.pkl
 !Streamlit_Projects/pickled_data/Evaluation_Metrics_Spam.pkl
-
-# Flight model .pkl files
 !Streamlit_Projects/pickled_data/XGB_Model_Flight.pkl
 !Streamlit_Projects/pickled_data/Evaluation_Metrics_Flight.pkl
-
-# Wine model .pkl files
 !Streamlit_Projects/pickled_data/Wine_model.pkl
 !Streamlit_Projects/pickled_data/tfidf_Vectorizer_Wine.pkl
 !Streamlit_Projects/pickled_data/Evaluation_Metrics_Wine.pkl
 
-
+# Ignore all CSV files except testing datasets
+*.csv
+!Streamlit_Projects/DataSets/test_data.csv  # Example: Explicitly track this if necessary
