--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
+*.pickled_data filter=lfs diff=lfs merge=lfs -text
+*.DataSets filter=lfs diff=lfs merge=lfs -text
 *.pkl filter=lfs diff=lfs merge=lfs -text
 *.plk filter=lfs diff=lfs merge=lfs -text
