--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,3 @@
-*.pickled_data filter=lfs diff=lfs merge=lfs -text
-*.DataSets filter=lfs diff=lfs merge=lfs -text
-*.plk filter=lfs diff=lfs merge=lfs -text
+*.csv filter=lfs diff=lfs merge=lfs -text
 *.pkl filter=lfs diff=lfs merge=lfs -text
+*.plk filter=lfs diff=lfs merge=lfs -text
