--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,6 @@ matplotlib==3.8.1
 scikit-learn==1.3.1
 xgboost==1.7.6
 plotly==5.17.0
-wordcloud==1.9.2
+wordcloud==1.9.3
+numpy==1.24.0
+scipy==1.10.0
