--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-streamlit==1.25.0
-pandas==1.5.3
-nltk==3.9.1
-joblib==1.3.0
-matplotlib==3.8.1
-scikit-learn==1.3.1
-xgboost==1.7.6
-plotly==5.17.0
-wordcloud==1.9.3
-numpy==1.24.0
-scipy==1.10.0
+streamlit==1.16.0
+pandas==1.5.0
+joblib==1.2.0
+gdown==4.6.0
+matplotlib==3.5.1
+nltk==3.7
+wordcloud==1.8.1
+plotly==5.5.0
