--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+numpy==1.23.0
 pandas==1.5.0
 joblib==1.2.0
 gdown==4.6.0
-matplotlib==3.5.1
+matplotlib==3.6.3
 nltk==3.7
 wordcloud>=1.9.0
 plotly==5.5.0
-streamlit==1.16.0 
+streamlit==1.18.0  # or the latest version
+
