--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+altair==4.2.0
 numpy==1.23.0
 pandas==1.5.0
 joblib==1.2.0
@@ -6,5 +7,4 @@ matplotlib==3.6.3
 nltk==3.7
 wordcloud>=1.9.0
 plotly==5.5.0
-streamlit==1.18.0  # or the latest version
-
+streamlit==1.18.0
