--- a/requirements.txt
+++ b/requirements.txt
@@ -11,15 +11,16 @@
 
 streamlit==1.31.1
 altair==5.5.0
-pandas==2.2.3
-joblib==1.4.2
-plotly==5.24.1
-gdown==5.2.0
-matplotlib==3.10.0
-nltk==3.9.1
-wordcloud==1.9.4
-numpy==2.2.1
-scipy==1.15.1
+pandas==2.2.0
+joblib==1.3.2
+plotly==5.18.0
+gdown==4.7.1
+matplotlib==3.8.2
+nltk==3.8.1
+wordcloud==1.9.2
+numpy==1.26.2
+scipy==1.11.4
 pyfume==0.3.1
-tables==3.10.2
-blosc2==3.0.0
+tables==3.9.1
+blosc2==2.2.9
+scikit-learn==1.3.0
