--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,22 @@
+
+# numpy==1.23.0
+# pandas==1.5.0
+# joblib==1.2.0
+# gdown==4.6.0
+# matplotlib==3.6.3
+# nltk==3.7
+# wordcloud>=1.9.0
+# plotly==5.5.0
+# streamlit==1.18.0
+
+# numpy==1.26.2
+# pandas>=2.0.0
+# scikit-learn==1.5.2
+# joblib>=1.2.0
+# plotly==5.10.0
+# gdown==4.0.0
+# altair==4.2.0
+
 # altair==4.2.0
 # numpy==1.23.0
 # pandas==1.5.0
@@ -15,3 +34,4 @@ scikit-learn==1.0.2
 joblib==1.1.0
 plotly==5.0.0
 gdown==4.0.0
+xgboost==1.7.6
