--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit==1.14.0
-pandas==1.3.3
-scikit-learn==1.0.2
-joblib==1.1.0
-plotly==5.0.0
-gdown==4.0.0
-xgboost==1.7.6
+streamlit==1.41.0
+pandas>=1.4.0
+scikit-learn>=1.2.0
+joblib>=1.1.0
+plotly>=5.12.0
+gdown>=4.0.0
+xgboost>=1.7.6
+numpy>=1.21.0
