--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,12 @@
-
-# numpy==1.23.0
-# pandas==1.5.0
-# joblib==1.2.0
-# gdown==4.6.0
-# matplotlib==3.6.3
-# nltk==3.7
-# wordcloud>=1.9.0
-# plotly==5.5.0
-# streamlit==1.18.0
-
-# numpy==1.26.2
-# pandas>=2.0.0
-# scikit-learn==1.5.2
-# joblib>=1.2.0
-# plotly==5.10.0
-# gdown==4.0.0
-# altair==4.2.0
-
-# altair==4.2.0
-# numpy==1.23.0
-# pandas==1.5.0
-# joblib==1.2.0
-# gdown==4.6.0
-# matplotlib==3.6.3
-# nltk==3.7
-# wordcloud>=1.9.0
-# plotly==5.5.0
-# streamlit==1.18.0
-
-streamlit==1.14.0
-pandas==1.3.3
-scikit-learn==1.0.2
-joblib==1.1.0
-plotly==5.0.0
-gdown==4.0.0
-xgboost==1.7.6
+streamlit==1.41.0
+pandas>=1.4.0,<2.0.0  
+scikit-learn>=1.2.0,<1.6.0 
+joblib>=1.1.0
+plotly>=5.12.0
+gdown>=4.0.0
+xgboost>=1.7.6
+numpy>=1.21.0,<2.0.0 
+matplotlib>=3.3.0
+nltk>=3.6.0
+wordcloud>=1.8.0
+category_encoders>=2.7.0
