--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 streamlit==1.41.0
-pandas>=1.5.0
-scikit-learn>=1.2.0
+pandas>=1.4.0,<2.0.0  
+scikit-learn>=1.2.0,<1.6.0 
 joblib>=1.1.0
 plotly>=5.12.0
 gdown>=4.0.0
 xgboost>=1.7.6
-numpy>=1.21.0
+numpy>=1.21.0,<2.0.0 
 matplotlib>=3.3.0
 nltk>=3.6.0
 wordcloud>=1.8.0
-category_encoders==2.7.0
+category_encoders>=2.7.0
