--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
-# for the main branch:
-
 # Ignore everything by default
 *
 
-# Track Python files
+# Track Python files and specific directories 
 !*.py
+!Streamlit_Projects/Spam Model Notebooks/
+!Streamlit_Projects/Wine Model Notebooks/
+!Streamlit_Projects/Flight Model Notebooks/
 
 # Track images/ directory
 !images/
