--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ scikit-learn>=1.2.0,<1.6.0
 joblib>=1.1.0
 plotly>=5.12.0
 gdown>=4.0.0
-xgboost>=1.7.6
+xgboost==2.1.3
 numpy>=1.21.0,<2.0.0 
 matplotlib>=3.3.0
 nltk>=3.9.1
